--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -37,3 +37,4 @@
 @import 'components/seo-section';
 @import 'components/contacts-section';
 @import 'components/contacts';
+@import 'components/pagination';
