--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,6 +19,7 @@
 @import 'common/counter';
 @import 'common/mobile-menu';
 @import 'common/range-slider';
+@import 'common/tabs';
 
 @import 'components/header';
 @import 'components/footer';
@@ -38,3 +39,4 @@
 @import 'components/contacts-section';
 @import 'components/contacts';
 @import 'components/pagination';
+@import 'components/product';
