--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,6 +21,7 @@
 @import 'common/range-slider';
 @import 'common/tabs';
 
+@import 'components/slider-pagination';
 @import 'components/header';
 @import 'components/footer';
 @import 'components/catalog';
@@ -40,3 +41,4 @@
 @import 'components/contacts';
 @import 'components/pagination';
 @import 'components/product';
+@import 'components/cards-slider';
