--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -32,24 +32,30 @@
             width: calcRem(240);
             margin-right: calcRem(50);
             padding: 0 calcRem(10) calcRem(14) calcRem(15);
+            transform: translateX(12%);
             opacity: 0;
             background: $main;
             border-radius: 0px 0px 7.5px 7.5px;
-            transition: opacity $tr-time;
+            transition-property: opacity, transform;
+            transition-duration: $tr-time;
             &:focus-within, &:hover{
-                // transform: translateX(-100%);
+                transform: translateX(0);
                 opacity: 1;
                 pointer-events: all;
             }
         }
-        // $this: &;
-        // &:focus{
-        //     &+#{$this}-container{
-        //         #{$this}-dropdown{
-        //             transform: none;
-        //         }
-        //     }
-        // }
+        &-links{
+            padding: calcRem(15) 0 calcRem(4);
+            .search__link{
+                font-size: calcRem(14);
+                &--sub{
+                    font-size: calcRem(12);
+                }
+            }
+        }
+        &-show-all{
+            margin-top: calcRem(16);
+        }
     }
     &__container{
         display: flex;
