--- a/src/scss/base/_utils.scss
+++ b/src/scss/base/_utils.scss
@@ -62,12 +62,17 @@
 	width: calcRem(866);
 	height: calcRem(885);
 	animation: blur 5s ease-in-out 0s infinite alternate forwards;
+	pointer-events: none;
 	&__icon{
 		width: 100%;
 		height: 100%;
 		fill: #2CE8F4;
 		animation: fill 4s ease-in-out 0s infinite alternate forwards;
 	}
+}
+.stretch-container{
+	display: flex;
+	flex-direction: column;
 }
 
 
